--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       $recBtn,
       recognition,
       messageRecording = "Recording...",
-      messageCouldntHear = "I couldn't hear you, could you say that again?",
+      messageCouldntHear = "",
       messageInternalError = "Oh no, there has been an internal server error",
-      messageSorry = "I'm sorry, I don't have the answer to that yet.";
+      messageSorry = "";
 
     $(document).ready(function() {
       $speechInput = $("#speech");
